<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>NodeEditor</name>
  <version>1.0.0</version>
  <description>Qt framework for editiing graphical nodes</description>

  <maintainer email="dimitry.pinaev@gmail.com">Dimitry Pinaev</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-gui</build_depend>
  <build_depend>libqt5-svg-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>libqt5-xml</build_depend>
  <build_depend>qttools5-dev-tools</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
